--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.data.mongodb.auto-index-creation=true
 server.port=8080
 
 # JWT Configuration
+jwt.secret=your_very_long_secret_key_at_least_32_characters_long
+jwt.expiration=86400000
+
 # Logging Configuration
 logging.level.org.springframework.data.mongodb=DEBUG
 logging.level.org.springframework.web=DEBUG
