Friends collection updated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,9 @@ server.port=8080
 jwt.secret=your_very_long_secret_key_at_least_32_characters_long
 jwt.expiration=86400000
 
+# CORS Configuration (development)
+app.cors.allowed-origins=*
+
 # Logging Configuration
 logging.level.org.springframework.data.mongodb=DEBUG
 logging.level.org.springframework.web=DEBUG
