refactor(mongodb): replace connection string with host

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,11 @@
 spring.application.name=howudoin
 
 # MongoDB Configuration
-spring.data.mongodb.uri=mongodb://localhost:27017/howudoin
-spring.data.mongodb.auto-index-creation=true
+#spring.data.mongodb.uri=mongodb://localhost:27017/howudoin
+#spring.data.mongodb.auto-index-creation=true
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=howudoin
 
 # Server Configuration
 server.port=8080
